tests/errors/circular-include.spcasmtest
org 0

include "circularly-included.spcasmtest.noerror"
